<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simpleTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"> <!-- stretch the second column of the layout-->

    <!-- first row of the table layout-->
    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- first element of the row-->
        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/firstRowFirstColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/White"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/firstRowSecondColumn" />
    </TableRow>

    <TableRow
        android:id="@+id/secondRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/secondRowFistColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/secondRowSecondColumn" />
    </TableRow>

    <TableRow
        android:id="@+id/thirdRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/thirdRowFirstColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/thirdRowSecondColumn" />
    </TableRow>

    <TableRow
        android:id="@+id/fourthRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/fourthRowFirstColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:checked="true"
                android:buttonTint="@color/LightBlue" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:buttonTint="@color/Orange"/>
        </RadioGroup>

    </TableRow>

    <TableRow
        android:id="@+id/fifthRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/fifthRowFirstColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/fifthRowSecondColumn" />
    </TableRow>

    <TableRow
        android:id="@+id/sixthRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/sixthRowFirstColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="@string/sixthRowSecondColumn" />
    </TableRow>

    <TableRow
        android:id="@+id/seventhRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/confirmPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:text="@string/seventhRowFirstColumn"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="@string/seventhRowSecondColumn" />
    </TableRow>

    <Button
            android:id="@+id/userRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/Register"
            android:textSize="40sp"
            android:textColor="@color/White"
            android:background="@drawable/custom_register_button" />

</TableLayout>