<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/Black"
        android:background="@color/White"
        android:textSize="40sp"
        android:layout_marginTop="150dp"
        android:drawableLeft="@drawable/user"
        android:paddingLeft="2dp"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/Black"
        android:background="@color/White"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/password"
        android:paddingLeft="2dp"
        android:inputType="textPassword"
        android:textSize="40sp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="@color/White"
        android:background="@drawable/custom_login_button" />

</LinearLayout>