<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserManagement">

    <androidx.core.widget.NestedScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/userManagementThumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/Black"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/userManagementTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userManagementCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:text="Category"
                android:textColor="@color/Black"
                android:background="@color/LightBlue" />

            <TableRow
                android:id="@+id/firstRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fullNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:text="@string/firstRowFirstColumn"
                    android:textColor="@color/Black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/fullNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:hint="@string/firstRowSecondColumn" />
            </TableRow>

            <TableRow
                android:id="@+id/secondRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:text="@string/secondRowFistColumn"
                    android:textColor="@color/Black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:hint="@string/secondRowSecondColumn" />
            </TableRow>

            <TableRow
                android:id="@+id/thirdRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:text="@string/thirdRowFirstColumn"
                    android:textColor="@color/Black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:hint="@string/thirdRowSecondColumn" />
            </TableRow>

            <TableRow
                android:id="@+id/sixthRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:text="@string/sixthRowFirstColumn"
                    android:textColor="@color/Black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:hint="@string/sixthRowSecondColumn" />
            </TableRow>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/Update"
                android:textSize="20sp"
                android:textColor="@color/Green"
                android:background="@drawable/material_button" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</TableLayout>